--- a/MovieApp/appsettings.json
+++ b/MovieApp/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-MovieApp-DACCD18A-2AC7-42EF-A16E-9DFDC34082DC;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Data Source=sql5053.site4now.net;Initial Catalog=db_a822db_movieapp ;User Id=db_a822db_movieapp_admin;Password=dudzik12"
   },
   "Logging": {
     "LogLevel": {
